lib/bait/tests/inout_error/fun/param_assign.in.bt
fun foo(a i32) {
	a += 1
}
